# run-classification-validation-app

./: .env.example  .gitignore  README.md  app.py  cli.py  demo_validation.py  pyproject.toml  requirements.txt  run_app.sh  utils.py
test_data/: cxi10136542_full_enrichment.md  mfx10089532_full_enrichment.md
validations/: cxi10136542_full_enrichment_validation.json  demo_validation.json  mfx10084872_full_enrichment_validation.json  mfxp100442_full_enrichment_validation.json
