[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "run-classification-validator"
version = "1.0.0"
description = "Streamlit app for validating automated run classifications from experimental logbook data"
readme = "README.md"
authors = [
    {name = "Run Classification Validator Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/example/run-classification-validator"
Repository = "https://github.com/example/run-classification-validator"
Issues = "https://github.com/example/run-classification-validator/issues"

[project.scripts]
run-classification-validator = "cli:main"
rcv = "cli:main"

[tool.setuptools]
py-modules = ["cli", "app", "utils", "demo_validation"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "test_data/*", "validations/*"]